# RAG-API

./: .gitignore  .gitignore.sample  Cargo.toml  README.md  TASK_13_IMPLEMENTATION_SUMMARY.md  build.rs  test_api.sh
.kiro/specs/rag-search-api/: design.md  requirements.md  tasks.md
examples/: cache_demo.rs  grpc_demo.rs  observability_demo.rs  postgres_demo.rs  redis_demo.rs  tokenizer_demo.rs
proto/: search.proto
src/: config.rs  error.rs  grpc.rs  lib.rs  main.rs  types.rs
src/cache/: README.md  mod.rs  redis_client.rs  tests.rs
src/database/: README.md  mod.rs  postgres_client.rs  schema.rs  tests.rs
src/grpc/: integration_tests.rs
src/ml/: bi_encoder.rs  cross_encoder.rs  mod.rs  model_loader.rs  tests.rs  tokenizer.rs
src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  tests.rs  tracing.rs
src/search/: circuit_breaker.rs  fallback.rs  mod.rs  reranking.rs  retry.rs  service.rs  tests.rs
src/server/: mod.rs
