[package]
name = "rag-search-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
axum = "0.7"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# gRPC framework
tonic = "0.11"
# ONNX Runtime for ML inference
ort = "2.0.0-rc.10"
# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
# PostgreSQL client
tokio-postgres = "0.7"
# Connection pooling for Postgres
deadpool-postgres = "0.12"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
# Metrics
prometheus = "0.13"
# Hashing for cache keys
farmhash = "1.1"
# Tokenization
tokenizers = "0.15"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
axum-test = "15.0"
tokio-test = "0.4"