[package]
name = "rag-search-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
axum = "0.7"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# gRPC framework
tonic = "0.11"
# Protocol buffers
prost = "0.12"
# Async streams for gRPC
tokio-stream = "0.1"
# Async trait support
async-trait = "0.1"
# ONNX Runtime for ML inference
ort = "2.0.0-rc.10"
# Redis client with cluster and TLS support
fred = { version = "8.0", features = ["enable-native-tls"] }
# PostgreSQL client
tokio-postgres = "0.7"
# Connection pooling for Postgres
deadpool-postgres = "0.12"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }
# PostgreSQL UUID support
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging
tracing = "0.1"
# Metrics and observability
prometheus = "0.13"
# OpenTelemetry tracing
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
tracing-opentelemetry = "0.22"
# Additional tracing features
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Metrics middleware for axum
axum-prometheus = "0.6"
# Hashing for cache keys
farmhash = "1.1"
# Tokenization
tokenizers = "0.15"
# Environment variable loading
dotenvy = "0.15"
# HTTP client for model downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
# SHA256 hashing for model verification
sha2 = "0.10"
# Hex encoding/decoding
hex = "0.4"
# Async file operations
tokio-util = { version = "0.7", features = ["io"] }
# Futures utilities
futures = "0.3"
# Random number generation for jitter
rand = "0.8"
# URL parsing for sanitizing logs
url = "2.5"
# Regular expressions for log sanitization
regex = "1.10"
# HTTP middleware for CORS and security headers
tower-http = { version = "0.5", features = ["cors", "limit", "set-header"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
axum-test = "15.0"
tokio-test = "0.4"
tempfile = "3.8"